[gd_scene load_steps=3 format=3 uid="uid://d2rhy88tf5ack"]

[ext_resource type="Theme" uid="uid://b72g06jk405ar" path="res://Assets/Themes/theme_title.tres" id="1_s06i3"]
[ext_resource type="Script" path="res://Scenes/title.gd" id="2_1464n"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s06i3")
script = ExtResource("2_1464n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 69.0
offset_right = 308.0
offset_bottom = 170.0

[node name="BtnStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="BtnCredits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="BtnClose" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="VBoxContainer/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnClose" to="." method="_on_btn_close_pressed"]
